Add company logo to nav bar component

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary">
-    <span>My Application Logo</span>
+    <img src="assets/images/logo.png" alt="My Application Logo" style="height: 80px;">
+    
     <span class="spacer-left"></span>
   
     <div class="center-links" fxHide fxShow.gt-xs>
