--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,32 +1,33 @@
 <mat-toolbar color="primary">
-    <img src="assets/images/logo.png" alt="My Application Logo" style="height: 80px;">
-    
-    <span class="spacer-left"></span>
   
-    <div class="center-links" fxHide fxShow.gt-xs>
-      <a mat-button routerLink="/">Home</a>
-      <a mat-button routerLink="/shop">Shop</a>
-      <a mat-button routerLink="/error">Error</a>
-    </div>
-  
-    <span class="spacer-right"></span>
-  
-    <div class="right-links" fxHide fxShow.gt-xs>
-      <a mat-button routerLink="/cart"><mat-icon>shopping_cart</mat-icon> Cart</a>
-      <a mat-button routerLink="/login">Login</a>
-      <a mat-button routerLink="/signup"><mat-icon>logout</mat-icon> Sign up</a>
-    </div>
-  
-    <button mat-icon-button [matMenuTriggerFor]="menu" fxShow fxHide.gt-xs>
-      <mat-icon>menu</mat-icon>
-    </button>
-  </mat-toolbar>
-  
-  <mat-menu #menu="matMenu">
-    <button mat-menu-item routerLink="/">Home</button>
-    <button mat-menu-item routerLink="/shop">Shop</button>
-    <button mat-menu-item routerLink="/error">Error</button>
-    <button mat-menu-item routerLink="/cart">Cart</button>
-    <button mat-menu-item routerLink="/login">Login</button>
-    <button mat-menu-item routerLink="/signup">Sign up</button>
-  </mat-menu>
+  <img src="assets/images/logo-test.png" alt="Skinet Core company logo with the title 'Skinet Core' and subtitle 'Snow Sports Gears'" style="height: 80px;">
+
+  <span class="spacer-left"></span>
+
+  <div class="center-links" fxHide fxShow.gt-xs>
+    <a mat-button routerLink="/" aria-label="Home page">Home</a>
+    <a mat-button routerLink="/shop" aria-label="Shop page">Shop</a>
+    <a mat-button routerLink="/error" aria-label="Error page">Error</a>
+  </div>
+
+  <span class="spacer-right"></span>
+
+  <div class="right-links" fxHide fxShow.gt-xs>
+    <a mat-button routerLink="/cart" aria-label="Cart page"><mat-icon aria-hidden="true">shopping_cart</mat-icon> Cart</a>
+    <a mat-button routerLink="/login" aria-label="Login page">Login</a>
+    <a mat-button routerLink="/signup" aria-label="Sign up page"><mat-icon aria-hidden="true">logout</mat-icon> Sign up</a>
+  </div>
+
+  <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu" fxShow fxHide.gt-xs>
+    <mat-icon aria-hidden="true">menu</mat-icon>
+  </button>
+</mat-toolbar>
+
+<mat-menu #menu="matMenu">
+  <button mat-menu-item routerLink="/" aria-label="Home page">Home</button>
+  <button mat-menu-item routerLink="/shop" aria-label="Shop page">Shop</button>
+  <button mat-menu-item routerLink="/error" aria-label="Error page">Error</button>
+  <button mat-menu-item routerLink="/cart" aria-label="Cart page">Cart</button>
+  <button mat-menu-item routerLink="/login" aria-label="Login page">Login</button>
+  <button mat-menu-item routerLink="/signup" aria-label="Sign up page">Sign up</button>
+</mat-menu>
