Change navbar color

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar color="primary">
+<mat-toolbar class="mat-toolbar" color="primary">
   
-  <img src="assets/images/logo-test.png" alt="Skinet Core company logo with the title 'Skinet Core' and subtitle 'Snow Sports Gears'" style="height: 80px;">
+  <img src="assets/images/logo.png" alt="Skinet Core company logo with the title 'Skinet Core' and subtitle 'Snow Sports Gears'">
 
   <span class="spacer-left"></span>
 
