--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,13 +1,37 @@
-<div class="container">
-  <div fxLayout="row">
-    <section fxFlex="25">Filters</section>
-    <section fxFlex="75">
-      <mat-grid-list cols="2" rowHeight="3:1">
-        <mat-grid-tile>1</mat-grid-tile>
-        <mat-grid-tile>2</mat-grid-tile>
-        <mat-grid-tile>3</mat-grid-tile>
-        <mat-grid-tile>4</mat-grid-tile>
-      </mat-grid-list>
-    </section>
-  </div>
+<div fxLayout="row">
+  <section fxFlex="25" class="shoppingSection">
+    <div class="filters">
+      <h5>Brands</h5>
+      <mat-selection-list>
+        <mat-list-option *ngFor="let brand of brands">
+          {{ brand.name }}
+        </mat-list-option>
+      </mat-selection-list>
+    </div>
+    <div class="filters">
+      <h5>Types</h5>
+      <mat-selection-list>
+        <mat-list-option *ngFor="let type of types">
+          {{ type.name }}
+        </mat-list-option>
+      </mat-selection-list>
+    </div>
+  </section>
+  <section fxFlex="75" class="shoppingSection">
+    <div fxLayout="row" fxLayoutAlign="space-between center">
+      <span>Showing <strong>10</strong> of <strong>18</strong> results</span>
+      <div class="search">
+        <mat-form-field>
+          <mat-label>Search</mat-label>
+          <input matInput placeholder="Ex. skiboards" />
+        </mat-form-field>
+      </div>
+    </div>
+    <mat-grid-list cols="2" rowHeight="3:1">
+      <mat-grid-tile>Product 1</mat-grid-tile>
+      <mat-grid-tile>Product 2</mat-grid-tile>
+      <mat-grid-tile>Product 3</mat-grid-tile>
+      <mat-grid-tile>Product 4</mat-grid-tile>
+    </mat-grid-list>
+  </section>
 </div>
