--- a/src/app/shop/shop.component.scss
+++ b/src/app/shop/shop.component.scss
@@ -1,4 +1,24 @@
 .mat-grid-tile {
-    background-color: lightgray;
-    border-radius: 5px;
-  }
+  background-color: lightgray;
+  border-radius: 5px;
+}
+
+.shoppingSection {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 50px;
+  margin-left: 50px;
+}
+
+.search {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.filters {
+  margin-bottom: 30px;
+}
+
+.filters-itens {
+  padding-right: 10px;
+}
