--- a/src/app/shop/shop.component.scss
+++ b/src/app/shop/shop.component.scss
@@ -1,24 +1,53 @@
-.mat-grid-tile {
-  background-color: lightgray;
-  border-radius: 5px;
+.search {
+  display: flexbox;
+  justify-content: flex-start;
+}
+
+.input {
+  width: 300px;
 }
 
 .shoppingSection {
   margin-top: 10px;
   margin-bottom: 10px;
-  margin-right: 50px;
-  margin-left: 50px;
+  margin-right: 380px;
+  margin-left: 10px;
 }
 
-.search {
-  display: flex;
-  justify-content: flex-end;
+.filters-section {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  margin-left: 380px;
 }
 
 .filters {
   margin-bottom: 30px;
+  margin-right: 10px;
+  height: 50px;
+  width: 900px;
 }
 
 .filters-itens {
   padding-right: 10px;
 }
+
+// Filters for brands and types
+mat-list-option {
+  padding: 0;
+  margin: 0px;
+  border: 0;
+  width: 300px;
+  height: 50;
+}
+
+// Filter by and search
+mat-form-field {
+  width: 300px;
+  height: 50;
+}
+
+// mat-selection-list {
+//   width: 100px;
+//   height: 100px;
+// }
