--- a/src/app/shop/product-item/product-item.component.scss
+++ b/src/app/shop/product-item/product-item.component.scss
@@ -1,8 +1,4 @@
-.card {
-  max-width: 400px;
-}
-
-.card-header-image {
-  background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
-  background-size: cover;
+.spacer {
+  flex: 1 1 auto; 
+  margin: 10px;
 }
